tests/paczka2/big_fuzzy/40575311.err
Error in line 5: o4v S941 41,9
Error in line 21: S}86 S46} 42,4
Error in line 19: S986 S941 61,2
Error in line 15: kQYrRk S986 89,0
Error in line 32: mIK6iAJOsBA S734 68,1
Error in line 26: S986 S469 45,8
Error in line 41: JS9rcngRJ S941 90,70
Error in line 39: S986 S941 80,1
Error in line 42: S986 S469 61,8
Error in line 44: kQYrRk S469 49,2
Error in line 58: JS9rcngRJ S734 98,4
Error in line 55: kQYrRk S986 53,7
Error in line 72: S986 S734 80,16
Error in line 70: S986 S469 66,8
Error in line 69: JuuDR1fg S469 254,4
Error in line 81: M7kMEoljshJ S941 64,0
Error in line 80: JuuDR1fg S941 55,5
Error in line 84: JuuDR1fg S469 98,1
Error in line 67: JS9rcngRJ S941 4,2
Error in line 93: JuuDR1fg S986 48,4
Error in line 97: M7kMEoljshJ S986 41,18
Error in line 89: mIK6iAJOsBA S734 12,5
Error in line 98: mIK6iAJOsBA S986 62,5
Error in line 78: kQYrRk S469 53,8
Error in line 96: JuuDR1fg S734 84,6
Error in line 100: mIK6iAJOsBA S469 88,7
Error in line 102: JuuDR1fg S986 72,7
Error in line 110: JuuDR1fg S469 92,5
Error in line 99: o4v S941 28,5
Error in line 115: o4v S986 110,81
Error in line 77: S986 S734 67,7
Error in line 114: o4v S986 60,5
Error in line 122: kQYrRk S469 30,3
Error in line 134: o4v S734 46,1
Error in line 143: S986 S941 19,9
Error in line 150: o4v S986 79,2
Error in line 153: S986 S986 51,0
Error in line 155: o4v S734 77,3
Error in line 148: JuuDR1fg S469 7,7
Error in line 160: JS9rcngRJ S469 17,5
Error in line 170: S986 S469 96,7
Error in line 169: JuuDR1fg S469 68,6
Error in line 180: S986 S986 17,4
Error in line 184: kQYrRk S986 17,8
Error in line 187: JS9rcngRJ S986 61,6
Error in line 193: JS9rcngRJ S469 85,2
Error in line 196: o4v S734 69,5
Error in line 209: kQYrRk S469 94,5
Error in line 210: kQYrRk S734 43,4
Error in line 215: kQYrRk S941 87,4
Error in line 218: S986 S734 62,6
Error in line 216: JuuDR1fg S941 82,1
Error in line 237: JuuDR1fg S986 5,1
Error in line 231: kQYrRk S734 9,4
Error in line 233: S986 S986 85,2
